--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
+    "firebase": "^7.14.0",
+    "firebase-firestorm": "^2.0.5",
+    "firebaseui": "^4.5.0",
     "jquery": "^3.4.1",
     "node-sass": "^4.13.1",
     "popper.js": "^1.16.1",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
+    "vue-firestore": "^0.3.30",
     "vue-loader": "^15.9.1",
     "vue-router": "^3.1.6",
     "vuetify": "^2.2.21",
